[package]
name = "sous"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Manage culinary recipes in Rust"
repository = "https://github.com/emar10/sous/"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tera = "1"
thiserror = "1"

